Add talks link.

--- a/public/index.html
+++ b/public/index.html
@@ -274,7 +274,9 @@ Also check out <a href="https://ndif.us/fellowship.html">NDIF engineering fellow
 Publication pages on
 <a href="http://dblp.uni-trier.de/pers/hd/b/Bau:David">Dblp</a>
 and <a href="https://scholar.google.com/citations?hl=en&user=CYI6cKgAAAAJ&view_op=list_works&sortby=pubdate">Google Scholar</a>.
-<br>
+
+<p>
+<a href="https://talks.baulab.info/">Talks at the Bau Lab</a>
 <!--
 My office at MIT:
 <a href="https://whereis.mit.edu/?zoom=16&lat=42.361612839999985&lng=-71.09056785999995&maptype=mit&q=32-383&open=object-32">Stata 32-383</a>
