--- a/public/index.html
+++ b/public/index.html
@@ -277,6 +277,7 @@ and <a href="https://scholar.google.com/citations?hl=en&user=CYI6cKgAAAAJ&view_o
 
 <p>
 <a href="https://talks.baulab.info/">Talks at the Bau Lab</a>
+<a href="https://resilience.baulab.info/">What is AI interpretability for?</a>
 <!--
 My office at MIT:
 <a href="https://whereis.mit.edu/?zoom=16&lat=42.361612839999985&lng=-71.09056785999995&maptype=mit&q=32-383&open=object-32">Stata 32-383</a>
