--- a/public/index.html
+++ b/public/index.html
@@ -276,7 +276,7 @@ Publication pages on
 and <a href="https://scholar.google.com/citations?hl=en&user=CYI6cKgAAAAJ&view_op=list_works&sortby=pubdate">Google Scholar</a>.
 
 <p>
-<a href="https://talks.baulab.info/">Talks at the Bau Lab</a>
+<a href="https://talks.baulab.info/">Talks at the Bau Lab</a> ;
 <a href="https://resilience.baulab.info/">What is AI interpretability for?</a>
 <!--
 My office at MIT:
