Update peer-reviewed papers.

--- a/public/cv.html
+++ b/public/cv.html
@@ -301,6 +301,39 @@ Grace W. Lindsay and <strong>David Bau</strong>. <a href="https://www.sciencedir
 <h3 class="main">Conference papers</h3>
 
 <div class="main pub">
+  Jaden Fiotto-Kaufman, Alexander R Loftus, Eric Todd, Jannik Brinkmann,
+  Caden Juang, Koyena Pal, Can Rager, Aaron Mueller, Samuel Marks,
+  Arnab Sen Sharma, Francesca Lucchetti, Michael Ripa, Adam Belfki,
+  Nikhil Prakash, Sumeet Multani, Carla Brodley, Arjun Guha,
+  Jonathan Bell, Byron Wallace, <strong>David Bau</strong>.
+  <a href="https://arxiv.org/abs/2407.14561">NNsight and NDIF: Democratizing Access to Foundation Model Internals</a>.
+  <em>Proceedings of the 2025 International Conference on Learning Representations.</em>
+  <nobr>(ICLR 2025)</nobr>
+</div>
+
+<div class="main pub">
+  Samuel Marks, Can Rager, Eric J Michaud, Yonatan Belinkov,
+  <strong>David Bau</strong>, Aaron Mueller.
+  <a href="https://features.baulab.info/">Sparse feature circuits: Discovering and editing interpretable causal graphs in language models</a>.
+  <em>Proceedings of the 2025 International Conference on Learning Representations.</em>
+  <nobr>(ICLR 2025 oral)</nobr>
+</div>
+
+<div class="main pub">Koyena Pal, <strong>David Bau</strong>, Ren&eacute;e J Miller.
+<a href="https://arxiv.org/abs/2403.02327"
+   >Model Lakes</a>.
+  <em>Proceedings of the 28th International Conference on Extending Database Technology.</em>
+  <nobr>(EDBT 2025)</nobr>
+</div>
+
+<div class="main pub">Adam Karvonen, Benjamin Wright, Can Rager, Rico Angell,
+  Jannik Brinkmann, Logan Smith, Claudio Mayrink Verdun, <strong>David Bau</strong>,
+  Samuel Marks.
+  <a href="https://arxiv.org/abs/2408.00113">Measuring progress in dictionary learning for language model interpretability with board game models</a>.
+  <em>Advances in Neural Information Processing Systems 37.</em> <nobr>(NeurIPS 2024)</nobr>.
+</div>
+
+<div class="main pub">
   Sheridan Feucht, David Atkinson, Byron Wallace, <strong>David Bau</strong>.
   <a href="https://footprints.baulab.info/"
     >Token Erasure as a Footprint of Implicit Vocabulary Items in LLMs.</a>
@@ -378,7 +411,8 @@ Grace W. Lindsay and <strong>David Bau</strong>. <a href="https://www.sciencedir
 </div>
 
 <div class="main pub">
-  Sarah Schwettmann, Tamar Rott Shaham, Joanna Materzy&nacute;ska, Neil Chowdhury, Shuang Li, Jacob Andreas, <strong>David Bau</strong>, and Antonio Torralba. <a href="https://arxiv.org/abs/2309.03886" >A Function Interpretation Benchmark for Evaluating Interpretability Methods.</a> <em>Advances in Neural Information Processing Systems 36.</em> <nobr>(NeurIPS 2023)</nobr>.
+  Sarah Schwettmann, Tamar Rott Shaham, Joanna Materzy&nacute;ska, Neil Chowdhury, Shuang Li, Jacob Andreas, <strong>David Bau</strong>, and Antonio Torralba. <a href="https://arxiv.org/abs/2309.03886" >A Function Interpretation Benchmark for Evaluating Interpretability Methods.</a>
+  <em>Advances in Neural Information Processing Systems 36.</em> <nobr>(NeurIPS 2023)</nobr>.
 </div>
 
 <div class="main pub">
@@ -530,26 +564,13 @@ Saksham Aggarwal, David Anthony Bau, <strong>David Bau</strong>. <a href="https:
 
 <h2 class="main">Preprints</h2>
 
-<div class="main pub">Jaden Fiotto-Kaufman, Alexander R Loftus, Eric Todd, Jannik Brinkmann, Caden Juang, Koyena Pal, Can Rager, Aaron Mueller, Samuel Marks, Arnab Sen Sharma, Francesca Lucchetti, Michael Ripa, Adam Belfki, Nikhil Prakash, Sumeet Multani, Carla Brodley, Arjun Guha, Jonathan Bell, Byron Wallace, <strong>David Bau</strong>.
-  <a href="https://arxiv.org/abs/2407.14561">NNsight and NDIF: Democratizing Access to Foundation Model Internals</a>.
-  arxiv.org/abs/2407.14561 (2024)</div>
-
-<div class="main pub">Samuel Marks, Can Rager, Eric J Michaud, Yonatan Belinkov, <strong>David Bau</strong>, Aaron Mueller.
-  <a href="https://features.baulab.info/">Sparse feature circuits: Discovering and editing interpretable causal graphs in language models</a>.
-  arxiv.org/abs/2403.19647 (2024)</div>
+<div class="main pub">Tal Haklay, Hadas Orgad, <strong>David Bau</strong>, Aaron Mueller, Yonatan Belinkov.
+  <a href="https://arxiv.org/abs/2502.04577">Position-aware Automatic Circuit Discovery</a>.
+  arxiv.org/abs/2502.04577 (2025)</div>
 
 <div class="main pub">Aaron Mueller, Jannik Brinkmann, Millicent Li, Samuel Marks, Koyena Pal, Nikhil Prakash, Can Rager, Aruna Sankaranarayanan, Arnab Sen Sharma, Jiuding Sun, Eric Todd, <strong>David Bau</strong>, Yonatan Belinkov.
   <a href="https://arxiv.org/abs/2408.01416">The Quest for the Right Mediator: A History, Survey, and Theoretical Grounding of Causal Interpretability</a>.
   arxiv.org/abs/2408.01416 (2024)</div>
-
-<div class="main pub">Adam Karvonen, Benjamin Wright, Can Rager, Rico Angell, Jannik Brinkmann, Logan Smith, Claudio Mayrink Verdun, <strong>David Bau</strong>, Samuel Marks.
-  <a href="https://arxiv.org/abs/2408.00113">Measuring progress in dictionary learning for language model interpretability with board game models</a>.
-  arxiv.org/abs/2408.00113 (2024)</div>
-
-<div class="main pub">Koyena Pal, <strong>David Bau</strong>, Ren&eacute;e J Miller.
-<a href="https://arxiv.org/abs/2403.02327"
-   >Model Lakes</a>.
-  arxiv.org/abs/2403.02327 (2024)</div>
 
 <div class="main pub">Alex Andonian, Sabrina Osmany, Audrey Cui, Yeon-Hwan Park, Ali Jahanian, Antonio Torralba, <strong>David Bau</strong>.  <a href="https://arxiv.org/abs/2103.10951">Paint by Word</a>.  arxiv.org/abs/2103.10951 (2021)</div>
 
