--- a/public/publications.html
+++ b/public/publications.html
@@ -162,6 +162,40 @@ figcaption {
 <h3 class="main">Conference Papers</h3>
 
 <div class="main pub">
+  Jaden Fiotto-Kaufman, Alexander R Loftus, Eric Todd, Jannik Brinkmann,
+  Caden Juang, Koyena Pal, Can Rager, Aaron Mueller, Samuel Marks,
+  Arnab Sen Sharma, Francesca Lucchetti, Michael Ripa, Adam Belfki,
+  Nikhil Prakash, Sumeet Multani, Carla Brodley, Arjun Guha,
+  Jonathan Bell, Byron Wallace, <strong>David Bau</strong>.
+  <a href="https://arxiv.org/abs/2407.14561">NNsight and NDIF: Democratizing Access to Foundation Model Internals</a>.
+  <em>Proceedings of the 2025 International Conference on Learning Representations.</em>
+  <nobr>(ICLR 2025)</nobr>
+</div>
+
+<div class="main pub">
+  Samuel Marks, Can Rager, Eric J Michaud, Yonatan Belinkov,
+  <strong>David Bau</strong>, Aaron Mueller.
+  <a href="https://features.baulab.info/">Sparse feature circuits: Discovering and editing interpretable causal graphs in language models</a>.
+  <em>Proceedings of the 2025 International Conference on Learning Representations.</em>
+  <nobr>(ICLR 2025 oral)</nobr>
+</div>
+
+<div class="main pub">Koyena Pal, <strong>David Bau</strong>, Ren&eacute;e J Miller.
+<a href="https://arxiv.org/abs/2403.02327"
+   >Model Lakes</a>.
+  <em>Proceedings of the 28th International Conference on Extending Database Technology.</em>
+  <nobr>(EDBT 2025)</nobr>
+</div>
+
+<div class="main pub">Adam Karvonen, Benjamin Wright, Can Rager, Rico Angell,
+  Jannik Brinkmann, Logan Smith, Claudio Mayrink Verdun, <strong>David Bau</strong>,
+  Samuel Marks.
+  <a href="https://arxiv.org/abs/2408.00113">Measuring progress in dictionary learning for language model interpretability with board game models</a>.
+  <em>Advances in Neural Information Processing Systems 37.</em> <nobr>(NeurIPS 2024)</nobr>.
+</div>
+
+
+<div class="main pub">
   Sheridan Feucht, David Atkinson, Byron Wallace, <strong>David Bau</strong>.
   <a href="https://footprints.baulab.info/"
     >Token Erasure as a Footprint of Implicit Vocabulary Items in LLMs.</a>
