--- a/public/cv.html
+++ b/public/cv.html
@@ -268,6 +268,8 @@ innovative programming tool project.
 
 <h2 class="main">Awards</h2>
 
+<div class="main">Sloan Research Fellowship, 2025</div>
+
 <div class="main">Ruth and Joel Spira Award for Excellence in Teaching, 2024</div>
 
 <div class="main">MIT EECS Great Educators Fellowship, 2015</div>
