--- a/public/index.html
+++ b/public/index.html
@@ -269,7 +269,7 @@ Also check out <a href="https://ndif.us/fellowship.html">NDIF engineering fellow
 <a href="publications.html">Publication List</a>. (PNAS; NeurIPS; ICLR; TPAMI; CVPR; SIGGRAPH; ECCV; ICCV.)
 <br>
 <a href="cv.html">Curriculum Vitae</a>.
-(PhD MIT EECS, <a href="http://dissection.csail.mit.edu/">thesis</a>; Cornell; Harvard; Google; Microsoft.)
+(PhD MIT EECS, <a href="http://dissection.csail.mit.edu/">thesis</a>; Cornell; Harvard; Google; Microsoft. <a href="https://sloan.org/fellowships/2025-fellows">Sloan fellowship</a>, <a href="https://www.khoury.northeastern.edu/awards/">Spira teaching award</a>)
 <br>
 Publication pages on
 <a href="http://dblp.uni-trier.de/pers/hd/b/Bau:David">Dblp</a>
