Add new lab members.

--- a/public/index.html
+++ b/public/index.html
@@ -293,6 +293,15 @@ My office at MIT:
 <h2 class="mt-4 mb-3">Lab Members</h2>
 <input class="collapse" type="checkbox">
 <p class="people">
+<a href="https://canrager.notion.site/">
+<img src="people/can.jpg">
+</a>
+<a href="https://aclanthology.org/people/n/natalie-shapira/">
+<img src="people/natalie.jpg">
+</a>
+<a href="https://wendlerc.github.io/">
+<img src="people/chris.jpg">
+</a>
 <a href="https://github.com/diatkinson">
 <img src="people/davidatkinson.jpg">
 David Atkinson
@@ -331,10 +340,12 @@ Nikhil Prakash
 <img src="people/jaden.jpg">
 Jaden Fiotto-Kaufman
 </a>
+<!--
 <a href="https://aaronmueller.github.io/">
 <img src="people/aaron.jpg">
 Aaron Mueller
 </a>
+-->
 </a>
 <a href="https://alex-loftus.com/">
 <img src="people/loftus.jpg">
