--- a/public/index.html
+++ b/public/index.html
@@ -186,12 +186,12 @@ figcaption {
 }
 @media (min-width: 992px) {
   .people a[href] {
-    margin: 0 10px;
+    margin: 0 2px;
   }
 }
 @media (min-width: 1200px) {
   .people a[href] {
-    margin: 0 20px;
+    margin: 0 10px;
   }
 }
 </style>
@@ -295,12 +295,15 @@ My office at MIT:
 <p class="people">
 <a href="https://canrager.notion.site/">
 <img src="people/can.jpg">
+Can Rager
 </a>
 <a href="https://aclanthology.org/people/n/natalie-shapira/">
 <img src="people/natalie.jpg">
+Natalie Shapira
 </a>
 <a href="https://wendlerc.github.io/">
 <img src="people/chris.jpg">
+Chris Wendler
 </a>
 <a href="https://github.com/diatkinson">
 <img src="people/davidatkinson.jpg">
