New link for Natalie.

--- a/public/index.html
+++ b/public/index.html
@@ -297,7 +297,7 @@ My office at MIT:
 <img src="people/can.jpg">
 Can Rager
 </a>
-<a href="https://aclanthology.org/people/n/natalie-shapira/">
+<a href="https://scholar.google.co.il/citations?hl=en&user=hd7quH4AAAAJ&sortby=pubdate">
 <img src="people/natalie.jpg">
 Natalie Shapira
 </a>
