Extra lab members

--- a/public/index.html
+++ b/public/index.html
@@ -343,23 +343,20 @@ Nikhil Prakash
 <img src="people/jaden.jpg">
 Jaden Fiotto-Kaufman
 </a>
-<!--
-<a href="https://aaronmueller.github.io/">
-<img src="people/aaron.jpg">
-Aaron Mueller
-</a>
--->
-</a>
 <a href="https://alex-loftus.com/">
 <img src="people/loftus.jpg">
 Alex Loftus
 </a>
-<!--
+<span class="extra">
+<a href="https://aaronmueller.github.io/">
+<img src="people/aaron.jpg">
+Aaron Mueller
+</a>
 <a href="https://www.lesswrong.com/users/sam-marks">
 <img src="people/sam.jpg">
 Sam Marks
 </a>
--->
+</span>
 <!--
 <a href="https://mengk.me/">
 <img src="people/kevin.jpg">
