--- a/public/index.html
+++ b/public/index.html
@@ -293,6 +293,7 @@ My office at MIT:
 <h2 class="mt-4 mb-3">Lab Members</h2>
 <input class="collapse" type="checkbox">
 <p class="people">
+<span class="current">
 <a href="https://canrager.notion.site/">
 <img src="people/can.jpg">
 Can Rager
@@ -347,6 +348,7 @@ Jaden Fiotto-Kaufman
 <img src="people/loftus.jpg">
 Alex Loftus
 </a>
+</span>
 <span class="extra">
 <a href="https://aaronmueller.github.io/">
 <img src="people/aaron.jpg">
