--- a/public/index.html
+++ b/public/index.html
@@ -105,6 +105,9 @@ h2, .namecard {
   font-size: 16px;
   opacity: 1;
 }
+.collapse:checked + p .extra img {
+  height: auto;
+}
 .collapse + p::after {
   content: '';
   display: block;
