--- a/public/index.html
+++ b/public/index.html
@@ -377,6 +377,10 @@ Alex Loftus
 </span>
 <span class="more"></span>
 <span class="extra">
+<a href="https://jiudingsun01.github.io/">
+<img src="people/jiuding.jpg">
+Jiuding Sun
+</a>
 <a href="https://aaronmueller.github.io/">
 <img src="people/aaron.jpg">
 Aaron Mueller
