--- a/public/cv.html
+++ b/public/cv.html
@@ -624,9 +624,13 @@ US&nbsp;Patent&nbsp;6859810. (2001)</div>
 
 <h2 class="main">Invited Talks</h2>
 
-<div class="main pub"><em>Opening Keynote: Cracking Open the Mystery of Large-Scale AI.</em> <a href="https://events.internet2.edu/website/79982/program/">Inaugural Annual Meeting of the National Artificial Intelligence Research Resource Pilot</a>. Washington, DC. Februrary 2024.</div>
+<div class="main pub"><em>How to Decode Surprises in Large-Scale AI.</em> Berkeley AI Research Lab. Berkeley, CA. April 2025.</div>
+<div class="main pub"><em>A Third Way for AI.</em> Anthropic Interpretability Team. San Francisco, CA. April 2025.</div>
+<div class="main pub"><em>Why Read the Code?</em> Transluce. San Francisco, CA. April 2025.</div>
+<div class="main pub"><em>The Continuing Surprise of Large-Scale AI.</em> Harvard AI Student Safety Offsite.  Essex, MA. March 2025.</div>
+<div class="main pub"><em>Opening Keynote: Cracking Open the Mystery of Large-Scale AI.</em> <a href="https://events.internet2.edu/website/79982/program/">Inaugural Annual Meeting of the National Artificial Intelligence Research Resource Pilot</a>. Washington, DC. Februrary 2025.</div>
 <div class="main pub"><em>What to do When Your Model Learns Too Much.</em> <a href="https://asu-apg.github.io/rbfm/">Workshop on Responsibly Building Next Generation of Multimodal Foundation Models at NeurIPS 2024</a>.  Vancouver BC, Canada.  December 2024.</div>
-<div class="main pub"><em>Meeting the Challengeof Understanding Massive AI.</em> <a href="https://www.mlsafety.org/events/neurips/2024">Towards Safe & Trustworthy Agents Workshop at NeurIPS 2024</a>.  Vancouver BC, Canada.  December 2024.</div>
+<div class="main pub"><em>Meeting the Challenge of Understanding Massive AI.</em> <a href="https://www.mlsafety.org/events/neurips/2024">Towards Safe & Trustworthy Agents Workshop at NeurIPS 2024</a>.  Vancouver BC, Canada.  December 2024.</div>
 <div class="main pub"><em>Opening Keynote: Reslience and Human Understanding in AI.</em> <a href="https://visxai.io/">7th Workshop on Visualization for AI Explainability</a>.  St. Petes Beach, Florida. October 2024.</div>
 <div class="main pub"><em>Interpretability and Responsibility in AI.</em> <a href="https://asu-apg.github.io/rbgm/">ECCV Workshop on Responsibly Building Generative Models</a>.  Milan, Italy. September 2024.</div>
 <div class="main pub"><em>Knowledge as Association.</em> <a href="https://sites.google.com/ttic.edu/knowledge-in-generative-models/home">ECCV Workshop on Knowledge in Generative Models</a>. Milan, Italy. September 2024.</div>
