--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-<title>David Bau: Interpretable Deep Networks</title>
+<title>David Bau: Interpretation of Deep Networks</title>
 <meta name="description" content="Specializing in the analysis and control of the internal computations of deep generative models for images and text, David Bau is a leading researcher in interpretable deep network methods.">
 <link rel="canonical" href="https://baulab.info/">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -235,7 +235,7 @@ gtag('js', new Date()); gtag('config', 'G-FD12LWN557');
  <div class="namecard">
  <h1><nobr>David Bau</nobr></h1>
  <p class="lead">
- <nobr>Interpretable Neural Networks</nobr>
+ <nobr>Interpretation of Neural Networks</nobr>
 <address>
  <a href="https://www.khoury.northeastern.edu/research/">
  <nobr>Northeastern University </nobr>
