--- a/public/index.html
+++ b/public/index.html
@@ -235,7 +235,7 @@ gtag('js', new Date()); gtag('config', 'G-FD12LWN557');
  <div class="namecard">
  <h1><nobr>David Bau</nobr></h1>
  <p class="lead">
- <nobr>Interpretation of Neural Networks</nobr>
+ <nobr>To Know what Neural Networks Know</nobr>
 <address>
  <a href="https://www.khoury.northeastern.edu/research/">
  <nobr>Northeastern University </nobr>
