--- a/public/cv-1.html
+++ b/public/cv-1.html
@@ -175,6 +175,17 @@ Staff software engineer.
 
 <div class="main">NSF Graduate Research Fellowship, 1992</div>
 
+<h2 class="main">Research Publications</h2>
+
+<div class="main">H-index 45. Over 130 publications and patents with over 23,000 citations, including publications in PNAS, NeurIPS, ICLR, COLM, EMNLP, TPAMI, CVPR, SIGGRAPH, ECCV, and ICCV.
+</div>
+
+<h2 class="main">Book</h2>
+
+<div class="main pub">Lloyd N. Trefethen, <strong>David Bau</strong>. <a href="http://www.amazon.com/Numerical-Linear-Algebra-Lloyd-Trefethen/dp/0898713617"><em>Numerical Linear Algebra.</em></a>
+(373pp.) Society for Industrial and Applied Mathematics. (1997)</div>
+
+
 </div>
 --><!--end references-->
 
