--- a/public/cv-1.html
+++ b/public/cv-1.html
@@ -67,6 +67,8 @@ p { margin-top: 8pt; margin-bottom: 8pt; }
 <td style="width:50%">
 Northeastern University<br>
 Khoury College of Computer Sciences</br>
+177 Huntington Avenue, Floor 22<br>
+Boston, MA 02115
 </td>
 <td>
 <table>
@@ -74,6 +76,10 @@ Khoury College of Computer Sciences</br>
   <td><a href="mailto:davidbau@northeastern.edu">davidbau@northeastern.edu</a></td></tr>
 <tr><td>Phone:&nbsp;</td>
   <td>+1-781-296-9825</td></tr>
+<tr><td>Website:&nbsp;</td>
+  <td><a href="https://baulab.info/">https://baulab.info</a></td></tr>
+<tr><td>Orcid ID:&nbsp;</td>
+  <td><a href="https://orcid.org/0000-0003-1744-6765">0000-0003-1744-6765</a></td></tr>
 </td>
 </tr>
 </table>
