--- a/public/cv-1.html
+++ b/public/cv-1.html
@@ -112,11 +112,16 @@ A.B. in Mathematics
 <div class="index">2022-current</div>
 <div class="main item">
 <strong>Assistant Professor.</strong> Northeastern University Khoury College of Computer Sciences.
+<ul>
+<li>Leads a lab focused on the mechanistic interpretation of
+  large-scale deep networks, with 10 PhD students.
+</ul>
 </div>
 
 <div class="index">2024-current</div>
 <div class="main item">
 <strong>National Deep Inference Fabric.</strong> <a href="https://ndif.us/">ndif.us</a>. Principal Investigator and Director.
+<ul><li>Created the project and team for a $9M NSF-funded research infrastructure project, consisting of a new programming idiom and a new inference service to enable research into the internals of very large-scale AI models such as trillion-parameter-class LLMs.
 </ul>
 </div>
 
@@ -134,6 +139,12 @@ A.B. in Mathematics
 <div class="main item">
 <strong>Pencil Code.</strong>
 <a href="https://pencilcode.net/">pencilcode.net</a>. Director.
+<ul>
+<li>Created the team and partnerships that researched, developed, and deployed,
+  and taught a novel educational programming system that uniqeuly
+  bridges block- and text-code learning, used on pencilcode.net by
+  200,000 students and via Code.org and CS First by tens of millions.
+</ul>
 </div>
 
 <div class="index">2009-2014</div>
@@ -152,8 +163,8 @@ Staff software engineer.
 
 <div class="index">2004-2007</div>
 <div class="main item"><strong>Google Talk.</strong>
-<a href="http://talk.google.com/">talk.google.com</a>
-(now known as Hangouts). Staff software engineer.
+<a href="http://talk.google.com/">talk.google.com</a>.
+Created and led the project as staff software engineer.
 </div>
 
 <div class="index">2003</div>
@@ -168,7 +179,7 @@ Staff software engineer.
 
 <div class="index">1993-2000</div>
 <div class="main item">
-<strong>Microsoft</strong>.  Contributed to Internet Explorer, the .Net platform, and other products.
+<strong>Microsoft</strong>.  Contributed to Internet Explorer, the .Net platform, IIS, and MSN.
 </div>
 
 <h2 class="main">Awards</h2>
