--- a/public/cv-1.html
+++ b/public/cv-1.html
@@ -112,17 +112,19 @@ A.B. in Mathematics
 <div class="index">2022-current</div>
 <div class="main item">
 <strong>Assistant Professor.</strong> Northeastern University Khoury College of Computer Sciences.
-<ul>
+<!--<ul>
 <li>Leads a lab focused on the mechanistic interpretation of
-  large-scale deep networks, with 10 PhD students.
-</ul>
+  large-scale deep networks, advising 10 PhD students.
+</ul>-->
 </div>
 
 <div class="index">2024-current</div>
 <div class="main item">
 <strong>National Deep Inference Fabric.</strong> <a href="https://ndif.us/">ndif.us</a>. Principal Investigator and Director.
+<!--
 <ul><li>Created the project and team for a $9M NSF-funded research infrastructure project, consisting of a new programming idiom and a new inference service to enable research into the internals of very large-scale AI models such as trillion-parameter-class LLMs.
 </ul>
+-->
 </div>
 
 <div class="index">2021-2022</div>
@@ -139,12 +141,14 @@ A.B. in Mathematics
 <div class="main item">
 <strong>Pencil Code.</strong>
 <a href="https://pencilcode.net/">pencilcode.net</a>. Director.
+<!--
 <ul>
 <li>Created the team and partnerships that researched, developed, and deployed,
   and taught a novel educational programming system that uniqeuly
   bridges block- and text-code learning, used on pencilcode.net by
   200,000 students and via Code.org and CS First by tens of millions.
 </ul>
+-->
 </div>
 
 <div class="index">2009-2014</div>
