--- a/public/cv-1.html
+++ b/public/cv-1.html
@@ -67,7 +67,7 @@ p { margin-top: 8pt; margin-bottom: 8pt; }
 <td style="width:50%">
 Northeastern University<br>
 Khoury College of Computer Sciences</br>
-177 Huntington Avenue, Floor 22, Boston, MA
+177 Huntington Ave 2224, Boston, MA
 </td>
 <td>
 <table>
