--- a/public/cv-1.html
+++ b/public/cv-1.html
@@ -199,7 +199,7 @@ Created and led the project as staff software engineer.
 
 <h2 class="main">Research Publications</h2>
 
-<div class="main">H-index 45. Over 130 publications and patents with over 23,000 citations, including publications in PNAS, NeurIPS, ICLR, COLM, EMNLP, TPAMI, CVPR, SIGGRAPH, ECCV, and ICCV.
+<div class="main">H-index 45. Over 130 publications and patents with over 23,000 citations, including publications in PNAS, NeurIPS, ICLR, COLM, EMNLP, TPAMI, CVPR, SIGGRAPH, ECCV, and ICCV. <a href="https://scholar.google.com/citations?user=CYI6cKgAAAAJ&hl=en">(full list)</a>
 </div>
 
 <h2 class="main">Book</h2>
