--- a/public/cv-1.html
+++ b/public/cv-1.html
@@ -114,8 +114,7 @@ A.B. in Mathematics
 <div class="main item">
 <strong>Assistant Professor.</strong> Northeastern University Khoury College of Computer Sciences.
 <ul>
-<li>Leads a lab focused on the mechanistic interpretation of
-  large-scale deep networks, advising 10 PhD students.
+<li>Directs a research laboratory dedicated to mechanistic interpretation of large-scale deep networks, securing $11M+ in competitive research grants as Principal Investigator and mentoring 10 PhD students.
 </ul>
 </div>
 
