--- a/public/cv.html
+++ b/public/cv.html
@@ -624,6 +624,7 @@ US&nbsp;Patent&nbsp;6859810. (2001)</div>
 
 <h2 class="main">Invited Talks</h2>
 
+<div class="main pub"><em>NDIF; How to Build Leadership in AI?</em> <a href="https://www.nitrd.gov/about-nitrd/">NDIRD</a> Working Group Seminar. May 2025.</div>
 <div class="main pub"><em>Studying Large-scale AI; Why Do this in Academia?</em> Boston University Center for Data Science. Boston, MA. April 2025.</div>
 <div class="main pub"><em>How to Decode Surprises in Large-Scale AI.</em> Berkeley AI Research Lab. Berkeley, CA. April 2025.</div>
 <div class="main pub"><em>A Third Way for AI.</em> Anthropic Interpretability Team. San Francisco, CA. April 2025.</div>
