--- a/public/cv-3.html
+++ b/public/cv-3.html
@@ -173,7 +173,7 @@ Staff software engineer.
 
 <div class="index">1993-2000</div>
 <div class="main item">
-<strong>Microsoft</strong>.  Several projects:
+<strong>Microsoft</strong>. Internet Explorer, ASP.NET.
 </div>
 
 <h2 class="main">Awards</h2>
