--- a/public/cv.html
+++ b/public/cv.html
@@ -624,7 +624,9 @@ US&nbsp;Patent&nbsp;6859810. (2001)</div>
 
 <h2 class="main">Invited Talks</h2>
 
-<div class="main pub"><em>NDIF; How to Build Leadership in AI?</em> <a href="https://www.nitrd.gov/about-nitrd/">NDIRD</a> Working Group Seminar. May 2025.</div>
+<div class="main pub"><em>Keynote: What is AI Interpretability For?</em> <a href="https://sites.google.com/view/miv-cvpr2025/">Mechanistic Interpretability in Vision Workshop at CVPR.</a> Nashville, TN. June 2025.</div>
+<div class="main pub"><em>Plenary: AI Interpetability and Human Agency</em> <a href="https://workshop.humancompatible.ai/">9th Annual Center for Human-Compatible AI Workshop</a>. Asilomar, CA. June 2025.</div>
+<div class="main pub"><em>NDIF; How to Build Leadership in AI?</em> <a href="https://www.nitrd.gov/about-nitrd/">NITRD</a> Working Group Seminar. May 2025.</div>
 <div class="main pub"><em>Studying Large-scale AI; Why Do this in Academia?</em> Boston University Center for Data Science. Boston, MA. April 2025.</div>
 <div class="main pub"><em>How to Decode Surprises in Large-Scale AI.</em> Berkeley AI Research Lab. Berkeley, CA. April 2025.</div>
 <div class="main pub"><em>A Third Way for AI.</em> Anthropic Interpretability Team. San Francisco, CA. April 2025.</div>
