--- a/public/cv.html
+++ b/public/cv.html
@@ -624,6 +624,7 @@ US&nbsp;Patent&nbsp;6859810. (2001)</div>
 
 <h2 class="main">Invited Talks</h2>
 
+<div class="main pub">Interpretability, Resilience, and Infrastructure in AI. <em>Public AI Seminar Series.</em> July 2025.</div>
 <div class="main pub">How to Understand Mechanisms in Large-Scale AI. <em>Cambridge Boston Alignment Initiative Seminar Series.</em> Cambridge, MA. July 2025.</div>
 <div class="main pub"><em>Keynote: What is AI Interpretability For?</em> <a href="https://sites.google.com/view/miv-cvpr2025/">Mechanistic Interpretability in Vision Workshop at CVPR.</a> Nashville, TN. June 2025.</div>
 <div class="main pub"><em>Plenary: AI Interpetability and Human Agency</em> <a href="https://workshop.humancompatible.ai/">9th Annual Center for Human-Compatible AI Workshop</a>. Asilomar, CA. June 2025.</div>
