--- a/public/index.html
+++ b/public/index.html
@@ -292,7 +292,7 @@ Also check out <a href="https://ndif.us/fellowship.html">NDIF engineering fellow
 
 
 <p>
-<a href="publications.html">Publication List</a>. (PNAS; NeurIPS; ICLR; TPAMI; CVPR; SIGGRAPH; ECCV; ICCV.)
+<a href="publications.html">Publication List</a>. (PNAS; NeurIPS; ICLR; TPAMI; CVPR; SIGGRAPH; EMNLP; ECCV; ICCV.)
 <br>
 <a href="cv.html">Curriculum Vitae</a>.
 (PhD MIT EECS, <a href="http://dissection.csail.mit.edu/">thesis</a>; Cornell; Harvard; Google; Microsoft. <a href="https://sloan.org/fellowships/2025-fellows">Sloan fellowship</a>, <a href="https://www.khoury.northeastern.edu/awards/">Spira teaching award</a>)
