Add grace and andy.

--- a/public/index.html
+++ b/public/index.html
@@ -374,6 +374,14 @@ Jaden Fiotto-Kaufman
 <img src="people/loftus.jpg">
 Alex Loftus
 </a>
+<a href="https://highdimensionalgrace.com/about/">
+<img src="people/grace.jpg">
+Grace Proebsting
+</a>
+<a href="https://andyrdt.com/">
+<img src="people/andy.jpg">
+Andy Arditi
+</a>
 </span>
 <span class="more"></span>
 <span class="extra">
