--- a/public/publications.html
+++ b/public/publications.html
@@ -187,7 +187,7 @@ figcaption {
 </div>
 
 <div class="main pub">
-  Jiachen Zhao, Jing Huang, Zhengxuan Wu, <strong><David Bau</strong>,
+  Jiachen Zhao, Jing Huang, Zhengxuan Wu, <strong>David Bau</strong>,
   Weiyan Shi.
   <a href="https://arxiv.org/abs/2507.11878"
     >Decoupling Harmfulness from Refusal in LLMs</a>.
