Fix html formatting.

--- a/public/publications.html
+++ b/public/publications.html
@@ -164,7 +164,7 @@ figcaption {
   Rohit Gandikota, Sheridan Feucht, Samuel Marks, <strong>David Bau</strong>.
   <a href="https://elm.baulab.info/"
     >Erasing Conceptual Knowledge from Language Models</a>.
-  <em>Advances in Neural Information Processing Systems 39.<em>
+  <em>Advances in Neural Information Processing Systems 39.</em>
   <nobr>(NeurIPS 2025)</nobr>
 </div>
 
@@ -173,7 +173,7 @@ figcaption {
   Justin Deschenaux, Robert West, Caglar Gulcehre, <strong>David Bau</strong>.
   <a href="https://arxiv.org/abs/2410.22366">One-Step is Enough:
     Sparse Autoencoders for Text-to-Image Diffusion Models</a>.
-  <em>Advances in Neural Information Processing Systems 39.<em>
+  <em>Advances in Neural Information Processing Systems 39.</em>
   <nobr>(NeurIPS 2025)</nobr>
 </div>
 
@@ -182,7 +182,7 @@ figcaption {
   <strong>David Bau</strong>, Chinmay Hegde, Niv Cohen.
   <a href="https://arxiv.org/abs/2505.17013"
     >When Are Concepts Erased From Diffusion Models?</a>
-  <em>Advances in Neural Information Processing Systems 39.<em>
+  <em>Advances in Neural Information Processing Systems 39.</em>
   <nobr>(NeurIPS 2025)</nobr>
 </div>
 
@@ -191,7 +191,7 @@ figcaption {
   Weiyan Shi.
   <a href="https://arxiv.org/abs/2507.11878"
     >Decoupling Harmfulness from Refusal in LLMs</a>.
-  <em>Advances in Neural Information Processing Systems 39.<em>
+  <em>Advances in Neural Information Processing Systems 39.</em>
   <nobr>(NeurIPS 2025)</nobr>
 </div>
 
