--- a/public/publications.html
+++ b/public/publications.html
@@ -442,10 +442,15 @@ Ming Zhao, Jay Yagnik, Hartwig Adam, <strong>David Bau</strong>.
 <h3 class="main">Journal Articles</h3>
 
 <div class="main pub">
+  Aaron Mueller, Jannik Brinkmann, Millicent Li, Samuel Marks, Koyena Pal, Nikhil Prakash, Can Rager, Aruna Sankaranarayanan, Arnab Sen Sharma, Jiuding Sun, Eric Todd, <strong>David Bau</strong>, Yonatan Belinkov.
+  <a href="https://arxiv.org/abs/2408.01416">The Quest for the Right Mediator: Surveying Mechanistic Interpretability for NLP Through the Lens of Causal Mediation Analysis</a>.
+  <em>Computational Linquistics (2025).</em>
+</div>
+
+<div class="main pub">
 Anka Reuel, Benjamin Bucknall, Stephen Casper, Timothy Fist, Lisa Soder, Onni Aarne, Lewis Hammond, Lujain Ibrahim, Alan Chan, Peter Wills, Markus Anderljung, Ben Garfinkel, Lennart Heim, Andrew Trask, Gabriel Mukobi, Rylan Schaeffer, Mauricio Baker, Sara Hooker, Irene Solaiman, Sasha Luccioni, Nitarshan Rajkumar, Nicolas Moës, Jeffrey Ladish, <strong>David Bau</strong>, Paul Bricman, Neel Guha, Jessica Newman, Yoshua Bengio, Tobin South, Alex Pentland, Sanmi Koyejo, Mykel J. Kochenderfer, Robert Trager.
 <a href="https://arxiv.org/abs/2407.14981>Open Problems in Technical AI Governance</a>.
 Transactions on Machine Learning Research 2025. <nobr>(TMLR 2025)</nobr>
-
 </div>
 
 <div class="main pub">
