--- a/public/publications.html
+++ b/public/publications.html
@@ -444,7 +444,7 @@ Ming Zhao, Jay Yagnik, Hartwig Adam, <strong>David Bau</strong>.
 <div class="main pub">
   Aaron Mueller, Jannik Brinkmann, Millicent Li, Samuel Marks, Koyena Pal, Nikhil Prakash, Can Rager, Aruna Sankaranarayanan, Arnab Sen Sharma, Jiuding Sun, Eric Todd, <strong>David Bau</strong>, Yonatan Belinkov.
   <a href="https://arxiv.org/abs/2408.01416">The Quest for the Right Mediator: Surveying Mechanistic Interpretability for NLP Through the Lens of Causal Mediation Analysis</a>.
-  <em>Computational Linquistics (2025).</em>
+  <em>Computational Linguistics (2025).</em>
 </div>
 
 <div class="main pub">
