--- a/public/cv.html
+++ b/public/cv.html
@@ -284,6 +284,19 @@ innovative programming tool project.
 <h3 class="main">Journals</h3>
 
 <div class="main pub">
+  Aaron Mueller, Jannik Brinkmann, Millicent Li, Samuel Marks, Koyena Pal, Nikhil Prakash, Can Rager, Aruna Sankaranarayanan, Arnab Sen Sharma, Jiuding Sun, Eric Todd, <strong>David Bau</strong>, Yonatan Belinkov.
+  <a href="https://arxiv.org/abs/2408.01416">The Quest for the Right Mediator: Surveying Mechanistic Interpretability for NLP Through the Lens of Causal Mediation Analysis</a>.
+  <em>Computational Linguistics (2025).</em>
+</div>
+
+<div class="main pub">
+Anka Reuel, Benjamin Bucknall, Stephen Casper, Timothy Fist, Lisa Soder, Onni Aarne, Lewis Hammond, Lujain Ibrahim, Alan Chan, Peter Wills, Markus Anderljung, Ben Garfinkel, Lennart Heim, Andrew Trask, Gabriel Mukobi, Rylan Schaeffer, Mauricio Baker, Sara Hooker, Irene Solaiman, Sasha Luccioni, Nitarshan Rajkumar, Nicolas Moës, Jeffrey Ladish, <strong>David Bau</strong>, Paul Bricman, Neel Guha, Jessica Newman, Yoshua Bengio, Tobin South, Alex Pentland, Sanmi Koyejo, Mykel J. Kochenderfer, Robert Trager.
+<a href="https://arxiv.org/abs/2407.14981">Open Problems in Technical AI Governance</a>.
+  <em>Transactions on Machine Learning Research 2025.</em>
+  <nobr>(TMLR 2025)</nobr>
+</div>
+
+<div class="main pub">
 Grace W. Lindsay and <strong>David Bau</strong>. <a href="https://www.sciencedirect.com/science/article/pii/S1389041723000906">Testing methods of neural systems understanding.</a> <em>Cognitive Systems Research (2023): 101156.</em>
 </div>
 
@@ -301,6 +314,72 @@ Grace W. Lindsay and <strong>David Bau</strong>. <a href="https://www.sciencedir
 <em>Communications of the ACM (CACM) Volume 60 Issue 6, June 2017. pp. 72-80.</em></div>
 
 <h3 class="main">Conference papers</h3>
+
+<div class="main pub">
+  Rohit Gandikota, Sheridan Feucht, Samuel Marks, <strong>David Bau</strong>.
+  <a href="https://elm.baulab.info/"
+    >Erasing Conceptual Knowledge from Language Models</a>.
+  <em>Advances in Neural Information Processing Systems 39.</em>
+  <nobr>(NeurIPS 2025)</nobr>
+</div>
+
+<div class="main pub">
+  Viacheslav Surkov, Chris Wendler, Antonio Mari, Mikhail Terekhov,
+  Justin Deschenaux, Robert West, Caglar Gulcehre, <strong>David Bau</strong>.
+  <a href="https://arxiv.org/abs/2410.22366">One-Step is Enough:
+    Sparse Autoencoders for Text-to-Image Diffusion Models</a>.
+  <em>Advances in Neural Information Processing Systems 39.</em>
+  <nobr>(NeurIPS 2025)</nobr>
+</div>
+
+<div class="main pub">
+  Kevin Lu, Nicky Kriplani, Rohit Gandikota, Minh Pham,
+  <strong>David Bau</strong>, Chinmay Hegde, Niv Cohen.
+  <a href="https://arxiv.org/abs/2505.17013"
+    >When Are Concepts Erased From Diffusion Models?</a>
+  <em>Advances in Neural Information Processing Systems 39.</em>
+  <nobr>(NeurIPS 2025)</nobr>
+</div>
+
+<div class="main pub">
+  Jiachen Zhao, Jing Huang, Zhengxuan Wu, <strong>David Bau</strong>,
+  Weiyan Shi.
+  <a href="https://arxiv.org/abs/2507.11878"
+    >Decoupling Harmfulness from Refusal in LLMs</a>.
+  <em>Advances in Neural Information Processing Systems 39.</em>
+  <nobr>(NeurIPS 2025)</nobr>
+</div>
+
+<div class="main pub">
+  Rohit Gandikota, Zongze Wu, Richard Zhang, <strong>David Bau</strong>,
+  Eli Shechtman, Nick Kolkin.
+  <a href="https://sliderspace.baulab.info/"
+    >SliderSpace: Decomposing the Visual Capabilities of Diffusion Models</a>.
+  <em>Proceedings of the IEEE International Conference on
+    Computer Vision 2025.</em>
+  <nobr>(ICCV 2025)</nobr>
+</div>
+
+<div class="main pub">
+  Aaron Mueller, Atticus Geiger, Sarah Wiegreffe, Dana Arad, Iván Arcuschin,
+  Adam Belfki, Yik Siu Chan, Jaden Fiotto-Kaufman, Tal Haklay, Michael Hanna,
+  Jing Huang, Rohan Gupta, Yaniv Nikankin, Hadas Orgad, Nikhil Prakash,
+  Anja Reusch, Aruna Sankaranarayanan, Shun Shao, Alessandro Stolfo,
+  Martin Tutek, Amir Zur, <strong>David Bau</strong>, Yonatan Belinkov.
+  <emProceedings of the 42nd International Conference on Machine Learning</em>.
+  <a href="https://arxiv.org/abs/2504.13151"
+    >MIB: A Mechanistic Interpretability Benchmark</a>.
+  <nobr>(ICML 2025)</nobr>
+</div>
+
+<div class="main pub">
+  Tal Haklay, Hadas Orgad, <strong>David Bau</strong>, Aaron Mueller,
+  Yonatan Belinkov.
+  <a href="">Position-aware Automatic Circuit Discovery</a>.
+  <em>Proceedings of the 63rd Annual Meeting of the
+  Association for Computational Linguistics</em>.
+  <nobr>(ACL 2025)</nobr>
+</div>
 
 <div class="main pub">
   Jaden Fiotto-Kaufman, Alexander R Loftus, Eric Todd, Jannik Brinkmann,
