--- a/public/cv-2.html
+++ b/public/cv-2.html
@@ -139,22 +139,9 @@ A.B. in Mathematics
 
 <div class="index">2009-2014</div>
 <div class="main item">
-<strong>Google Image Search.</strong>
-<a href="http://images.google.com/">images.google.com</a>.
+<strong>Google.</strong>
+Image search, web search, realtime communications.
 Staff software engineer.
-</div>
-
-<div class="index">2007-2008</div>
-<div class="main item">
-<strong>Google Search.</strong>
-<a href="http://google.com/">www.google.com</a>.
-Staff software engineer.
-</div>
-
-<div class="index">2004-2007</div>
-<div class="main item"><strong>Google Talk.</strong>
-<a href="http://talk.google.com/">talk.google.com</a>
-(now known as Hangouts). Staff software engineer.
 </div>
 
 <div class="index">2003</div>
