--- a/public/index.html
+++ b/public/index.html
@@ -382,6 +382,10 @@ Grace Proebsting
 <img src="people/andy.jpg">
 Andy Arditi
 </a>
+<a href="https://gsarti.com/">
+<img src="people/gabriele.jpg">
+Gabriele Sarti
+</a>
 </span>
 <span class="more"></span>
 <span class="extra">
